@@ -34,32 +34,43 @@ group = 'lowlevel'
 nethost = 'sans1srv.sans1.frm2'
 
 devices = dict(
-    col = device('devices.generic.MultiSwitcher',
-                 description = 'collimator uber device',
-                 precision = None,
-                 blockingmove = False,
-                 unit = 'm',
-                 fmtstr = '%.1f',
-#                 fallback = 'error',
-                 moveables = ['col_20a', 'col_20b', 'col_16a', 'col_16b', 'col_12b', 'col_12b',
-                              'col_8a', 'col_8b', 'col_4a', 'col_4b', 'col_2a', 'col_2b'],
-                 # col_2b disabled !!!
-                 mapping = {
-                     #~ 1:   ['NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG'],
-                     1.5: ['NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'COL'],
-                     2:   ['NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'COL', 'COL'],
-                     3:   ['NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'COL', 'COL', 'COL'],
-                     4:   ['NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'COL', 'COL', 'COL', 'COL'],
-                     6:   ['NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'COL', 'COL', 'COL', 'COL', 'COL'],
-                     8:   ['NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'COL', 'COL', 'COL', 'COL', 'COL', 'COL'],
-                     10:  ['NG',  'NG',  'NG',  'NG',  'NG',  'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL'],
-                     12:  ['NG',  'NG',  'NG',  'NG',  'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL'],
-                     14:  ['NG',  'NG',  'NG',  'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL'],
-                     16:  ['NG',  'NG',  'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL'],
-                     18:  ['NG',  'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL'],
-                     20:  ['COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL'],
-                 },
-                ),
+    shutter = device('devices.generic.ManualSwitch',
+                     description = 'dummy for primary shutter before collimation',
+                     states = ['open', 'closed'],
+                    ),
+    col = device('nicos.devices.generic.LockedMultiSwitcher',
+                  description = 'sans1 primary collimation',
+                  lock = 'shutter',
+                  lockvalue = None,     # go back to previous value
+                  unlockvalue = 'closed',
+                  keepfixed = False,	# dont fix shutter after movement
+    #~ col = device('devices.generic.MultiSwitcher',
+                  #~ description = 'collimator uber device',
+                  precision = None,
+                  blockingmove = False,
+                  unit = 'm',
+                  fmtstr = '%.1f',
+                  fallback = 'Error',
+                  moveables = ['col_20a', 'col_20b', 'col_16a', 'col_16b', 'col_12b', 'col_12b',
+                               'col_8a', 'col_8b', 'col_4a', 'col_4b', 'col_2a', 'col_2b'],
+                  # col_2b disabled !!!
+                  mapping = {
+                      #~ 1:   ['NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG'],
+                      1.5: ['NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'COL'],
+                      2:   ['NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'COL', 'COL'],
+                      3:   ['NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'COL', 'COL', 'COL'],
+                      4:   ['NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'COL', 'COL', 'COL', 'COL'],
+                      6:   ['NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'COL', 'COL', 'COL', 'COL', 'COL'],
+                      8:   ['NG',  'NG',  'NG',  'NG',  'NG',  'NG',  'COL', 'COL', 'COL', 'COL', 'COL', 'COL'],
+                      10:  ['NG',  'NG',  'NG',  'NG',  'NG',  'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL'],
+                      12:  ['NG',  'NG',  'NG',  'NG',  'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL'],
+                      14:  ['NG',  'NG',  'NG',  'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL'],
+                      16:  ['NG',  'NG',  'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL'],
+                      18:  ['NG',  'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL'],
+                      20:  ['COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL', 'COL'],
+                  },
+                  lowlevel = True,
+                 ),
 
     at = device('sans1.collimotor.Sans1ColliMotor',
                     description = 'Attenuator',
@@ -96,6 +107,7 @@ devices = dict(
                       refpos = -5.39,
                       abslimits = (-400, 600),
                       mapping = dict( P1=0, P2=117, P3=234, P4=351, NG=0, COL=117, FREE=234, LASER=351 ),
+                      lowlevel = True,
                      ),
     col_20b = device('sans1.collimotor.Sans1ColliMotor',
                       description = 'Collimotor 20b',
@@ -108,6 +120,7 @@ devices = dict(
                       refpos = -5.28,
                       abslimits = (-400, 600),
                       mapping = dict( P1=0, P2=117, P3=234, P4=351, NG=0, COL=117, FREE=234, LASER=351 ),
+                      lowlevel = True,
                      ),
     bg1 = device('sans1.collimotor.Sans1ColliMotor',
                       description = 'Background slit1 motor',
@@ -133,6 +146,7 @@ devices = dict(
                       refpos = -4.29,
                       abslimits = (-400, 600),
                       mapping = dict( P1=0, P2=117, P3=234, P4=351, NG=0, COL=117, FREE=234, LASER=351 ),
+                      lowlevel = True,
                      ),
     col_16b = device('sans1.collimotor.Sans1ColliMotor',
                       description = 'Collimotor 16b',
@@ -145,6 +159,7 @@ devices = dict(
                       refpos = -2.31,
                       abslimits = (-400, 600),
                       mapping = dict( P1=0, P2=117, P3=234, P4=351, NG=0, COL=117, FREE=234, LASER=351 ),
+                      lowlevel = True,
                      ),
     col_12a = device('sans1.collimotor.Sans1ColliMotor',
                       description = 'Collimotor 12a',
@@ -157,6 +172,7 @@ devices = dict(
                       refpos = -1.7,
                       abslimits = (-400, 600),
                       mapping = dict( P1=0, P2=117, P3=234, P4=351, NG=0, COL=117, FREE=234, LASER=351 ),
+                      lowlevel = True,
                      ),
     col_12b = device('sans1.collimotor.Sans1ColliMotor',
                       description = 'Collimotor 12b',
@@ -169,6 +185,7 @@ devices = dict(
                       refpos = -9.999, #XXX: Angabe fehlt in Doku !!!
                       abslimits = (-400, 600),
                       mapping = dict( P1=0, P2=117, P3=234, P4=351, NG=0, COL=117, FREE=234, LASER=351 ),
+                      lowlevel = True,
                      ),
     bg2 = device('sans1.collimotor.Sans1ColliMotor',
                       description = 'Background slit2',
@@ -194,6 +211,7 @@ devices = dict(
                       refpos = -3.88,
                       abslimits = (-400, 600),
                       mapping = dict( P1=0, P2=117, P3=234, P4=351, NG=0, COL=117, FREE=234, LASER=351 ),
+                      lowlevel = True,
                      ),
     col_8b = device('sans1.collimotor.Sans1ColliMotor',
                       description = 'Collimotor 8b',
@@ -206,6 +224,7 @@ devices = dict(
                       refpos = -4.13,
                       abslimits = (-400, 600),
                       mapping = dict( P1=0, P2=117, P3=234, P4=351, NG=0, COL=117, FREE=234, LASER=351 ),
+                      lowlevel = True,
                      ),
     col_4a = device('sans1.collimotor.Sans1ColliMotor',
                       description = 'Collimotor 4a',
@@ -218,6 +237,7 @@ devices = dict(
                       refpos = -9.37,
                       abslimits = (-400, 600),
                       mapping = dict( P1=0, P2=117, P3=234, P4=351, NG=0, COL=117, FREE=234, LASER=351 ),
+                      lowlevel = True,
                      ),
     col_4b = device('sans1.collimotor.Sans1ColliMotor',
                       description = 'Collimotor 4b',
@@ -230,6 +250,7 @@ devices = dict(
                       refpos = -9.35,
                       abslimits = (-400, 600),
                       mapping = dict( P1=0, P2=117, P3=234, P4=351, NG=0, COL=117, FREE=234, LASER=351 ),
+                      lowlevel = True,
                      ),
     col_sa1 = device('sans1.collimotor.Sans1ColliMotor',
                       description = 'attenuation slits',
@@ -258,6 +279,7 @@ devices = dict(
                       loglevel = 'debug',
                       autopower = 'on',
                       autozero = 10,
+                      lowlevel = True,
                      ),
     col_2b = device('sans1.collimotor.Sans1ColliMotor',
                       description = 'Collimotor 2b',
@@ -272,7 +294,7 @@ devices = dict(
                       mapping = dict( P1=0, P2=117, P3=234, P4=351, NG=0, COL=117, FREE=234, LASER=351 ),
                       fixed = 'unreliable, do not use !',
                       fixedby = ('setupfile', 99),      # deny release!
+                      lowlevel = True,
                      ),
 # pump devices of 172.17.17.10 are at modbus-tacodevice //sans1srv.sans.frm2/sans1/coll/pump
 )
-
